--- a/other/Public-head.html
+++ b/other/Public-head.html
@@ -12,7 +12,7 @@
     <div id="top">
         <div class="top-con">
             <div class="fl top_l">
-                <ul>
+                <ul id='unLoginedHead'>
                     <li>你好，欢迎来到海澜之家!</li>
                     <li>
                         <a href="#">请登录</a>
@@ -237,5 +237,9 @@
     </div>
     </div>
 </body>
-<script src=./js/public-head.js></script>
+<!-- <script src=./js/public-head.js></script> -->
+<script type="module">
+    import publicHead from "./js/public-head.js"
+    let publicHeadEle=new publicHead();
+</script>
 </html>
