--- a/other/GoodDetails.html
+++ b/other/GoodDetails.html
@@ -33,26 +33,26 @@
                             <span class="zi fl ml10">优惠价</span>
                             <span class="goodprice fontW priceNum"></span>
                         </div>
-                        <div class="attribute fl ml10 "style="margin-bottom:30px">
+                        <div class="attribute fl ml10 ">
                             <span class="zi">尺码</span>
                         </div>
-                        <div class="good_attribute fl "style="margin-bottom:30px">
+                        <div class="good_attribute fl ">
                             <form id="sizeForm">
                                 <ul class="good_size fl"></ul>
                             </form>
                         </div>
-                        <div class="attribute fl ml10 " style="margin-bottom:30px">
+                        <div class="attribute fl ml10 mt30">
                             <span class="zi mt10">颜色分类</span>
                         </div>
-                        <div class="good_attribute fl "style="margin-bottom:30px">
+                        <div class="good_attribute fl mt30">
                             <form id="colorForm">
                                 <ul class="good_color fl"></ul>
                             </form>
                         </div>
-                    <div class="attribute fl ml10  " style="clear:left;margin-bottom: 30px;">
+                    <div class="attribute fl ml10 mt30 " style="clear:left">
                         <span class="zi mt5">数量</span>
                     </div>
-                    <div class="good_attribute fl "style="margin-bottom:30px">
+                    <div class="good_attribute fl mt30">
                         <ul class="good_num fl">
                             <li>
                                 <input placeholder value="1" class="num_input" id="num">
@@ -75,17 +75,11 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="good_to_buy fl "style="margin-bottom:30px">
+                    <div class="good_to_buy fl mt30">
                         <div class="buy_now fl cur">立即购买</div>
                         <div class="buy_after fl cur">
                             <i class="buy">加入购物车</i>
                         </div>
-                    </div>
-                    <div class="ser" style="clear: both;">
-                    <span style="display:inline-block;width:100px">服务承诺</span>
-                    <span style="display:inline-block;width:100px">正品保证</span>
-                    <span style="display:inline-block;width:100px">极速退款</span>
-                    <span style="display:inline-block;width:100px">七天无理由退货</span>
                     </div>
                     </div>
                 </div>
